--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js --ignore client --ignore dist"
+    "start": "nodemon index.js --ignore client --ignore dist"
   },
   "author": "",
   "license": "ISC",
